阿哈算法 学习笔记
阿哈算法 学习笔记

--- a/order/order.html
+++ b/order/order.html
@@ -40,7 +40,7 @@
               </tr>
             </tbody>
           </table>
-          <button type="button" class="btn btn-default" id='b'>排序<tton>
+          <button type="button" class="btn btn-default" id='b'>排序</button>
         </div>
       </div>
     </div>
@@ -124,4 +124,4 @@
   });
 </script>
 </body>
-</ml>
+</html>
